fix(np-theme.scss): restore dark mode variables

--- a/src/assets/scss/themes/np-theme.scss
+++ b/src/assets/scss/themes/np-theme.scss
@@ -5,26 +5,37 @@
 /*========================
  Light theme
 ========================*/
+// $primary:      #3066BE !default;
+// $success:      #F4D58D !default;
+// $accent:       #E6AF2E !default;
+// $warn:         #D72638 !default;
+// $light:        rgba(255, 255, 255, 1) !default;
+// $foreground:   #1f2224 !default;
+// $background:   rgba(242,243,247, 1) !default;
+// $shadow:       rgba(221, 228, 239, 1) !default;
+// $shadow-light: rgba(255, 255, 255, 1) !default;
+// $dark:          $dark !default;
+// $warning:       $warning !default;
+// $info:          $info !default;
+// $secondary:     $secondary !default;
+
+/*========================
+ Night theme
+========================*/
 $primary:      #3066BE !default;
-$success:      #F4D58D !default;
-$accent:       #E6AF2E !default;
+$success:      rgb(175, 232, 138, 1) !default;
+$accent:       #F4D58D !default;
 $warn:         #D72638 !default;
 $light:        rgba(255, 255, 255, 1) !default;
-$foreground:   #1f2224 !default;
-$background:   rgba(242,243,247, 1) !default;
-$shadow:       rgba(221, 228, 239, 1) !default;
-$shadow-light: rgba(255, 255, 255, 1) !default;
+$foreground:   rgb(226, 224, 213) !default;
+$background:   #1f2224 !default;
+$shadow:       rgba(15, 15, 16, 0.842) !default;
+$shadow-light: rgba(40, 40, 40, 0.801) !default;
 $dark:          $dark !default;
 $warning:       $warning !default;
 $info:          $info !default;
 $secondary:     $secondary !default;
 
-/*========================
- Night theme
-// $dark:          $dark !default;
-// $warning:       $warning !default;
-// $info:          $info !default;
-// $secondary:     $secondary !default;
 
 /*====================================
  Np Sizes
